Fix: Glassmorphism, Buttons, Tabs Padding, Improved readability
Better glassmorphism (more visible), Button gets scaled to 1.1 upon
hovered, change tabs padding from 12px to 1rem, Add section to group
selectors togheter.

--- a/ressources/style.css
+++ b/ressources/style.css
@@ -156,6 +156,9 @@ li {
     background-color: #f9c846;
     border: solid .2rem #f9c846
 }
+.btn.filled:hover{
+    scale: 1.1;
+}
 .btn.bordered{
     border: solid .2rem #f9c846
 }
